Bug #16421 Events: Replication of effects doesn't work
Submitted: 12 Jan 2006 5:13 Modified: 6 May 2007 5:06
Reporter: Peter Gulutzan
Status: Closed
Category:Server: Replication Severity:S1 (Critical)
Version:5.1.7, 5.1.6-alpha-debug OS:Linux (SUSE 10.0)
Assigned to: Chuck Bell Target Version:

[12 Jan 2006 5:13] Peter Gulutzan
Description:
Replication of events doesn't work, for either
statement-based or row-based replication.
Moreover, it is "still not know how it will
work with fail-over".

How to repeat:

With replication working, create an event and
set global event_scheduler = 1;
Notice that the event's changes aren't replicated.
[2 Mar 2006 15:49] Valeriy Kravchuk
Bug #17857 was marked as a duplicate of this one. Please, pay attention to it!
[3 Mar 2006 17:23] Giuseppe Maxia
Further to my bug reports #17857 and #17858, I need to add that when I tested the system I
had already (as I usually do) deleted the anonymous users.
Then I saw messages in the error log saying that there were errors while trying to
execute events from user ''@''. So I added an anonymous user again, and then some events
were working  in the slaves.
Perhaps I should investigate further, because there are several problems here, besides
the (non) replication issue, namely the accuracy of the event creation statement and
possibly security implications. In the meantime, I thought that I should just pass along
this piece of information.
[29 Nov 2006 18:35] Lars Thalmann
PeterG says this is fixed.
[29 Nov 2006 18:37] Lars Thalmann
Ah, just read Giuseppe's comment.  Could QA please create a test case
for that?
[18 Dec 2006 14:45] Jonathan Miller
rpl_row_events.result

Attachment: rpl_row_events.result (application/octet-stream, text), 899 bytes.

[18 Dec 2006 14:45] Jonathan Miller
rpl_row_events.test

Attachment: rpl_row_events.test (application/octet-stream, text), 1.59 KiB.

[18 Dec 2006 14:46] Jonathan Miller
test_bug_16421.tar.gz

Attachment: test_bug_16421.tar.gz (application/x-gzip, text), 41.61 KiB.

[20 Dec 2006 22:09] Giuseppe Maxia
updated test to handle events with both SBR and RBR

Attachment: rpl_events.tar.gz (application/gzip, text), 1.01 KiB.

[3 Jan 2007 15:57] Lars Thalmann
Patch is marked WL#3629.
[13 Feb 2007 8:46] Rafal Somla
Fixed by WL#3629
[29 Mar 2007 17:26] Chuck Bell
Patch for this bug included in WL#3629. Patch pushed 29 Mar 2007.
[1 Apr 2007 1:55] Bugs System
Pushed into 5.1.18-beta
[6 May 2007 5:06] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented fix in 5.1.18 changelog. Documented associated feature changes in Events,
INFORMATION_SCHEMA, and Replication chapters of 5.1 Manual.