scripts/mysql_create_system_tables.sh
@@ -832,7 +832,7 @@ then
   c_ev="$c_ev   last_executed DATETIME default NULL,"
   c_ev="$c_ev   starts DATETIME default NULL,"
   c_ev="$c_ev   ends DATETIME default NULL,"
-  c_ev="$c_ev   status ENUM('ENABLED','DISABLED') NOT NULL default 'ENABLED',"
+  c_ev="$c_ev   status ENUM('ENABLED','DISABLED','SLAVESIDE_DISABLED') NOT NULL default 'ENABLED',"
   c_ev="$c_ev   on_completion ENUM('DROP','PRESERVE') NOT NULL default 'DROP',"
   c_ev="$c_ev   sql_mode          set("
   c_ev="$c_ev                         'REAL_AS_FLOAT',"
@@ -867,6 +867,7 @@ then
   c_ev="$c_ev                         'HIGH_NOT_PRECEDENCE'"
   c_ev="$c_ev                     ) DEFAULT '' NOT NULL,"
   c_ev="$c_ev   comment char(64) CHARACTER SET utf8 COLLATE utf8_bin NOT NULL default '',"
+  c_ev="$c_ev   originator int(10) NOT NULL,
   c_ev="$c_ev   PRIMARY KEY  (db, name)"
   c_ev="$c_ev ) ENGINE=MyISAM DEFAULT CHARSET=utf8 COMMENT 'Events';"
 fi
